# voice_agent

./: .gitignore  README.md
frontend/: package.json  types.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: ActiveCall.tsx  CallClientProvider.tsx  SessionPlayer.tsx  TranscriptTable.tsx
frontend/helperFns/: formatTime.ts
server/: .env.example  README.md  bot.py  main.py  pyproject.toml
