[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "pipecat-ai[cartesia,deepgram,google,silero]>=0.0.99",
    "python-dotenv>=1.2.1",
    "uuid>=1.30",
    "uvicorn[standard]>=0.40.0",
]
